Update Secrets | Update URL | Gallery Image Not Showing FIX

--- a/static/css/structure.css
+++ b/static/css/structure.css
@@ -69,6 +69,9 @@
     width: 90%;
     overflow-y: auto; 
     margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .online-members-list {
